package tn.faculte.facultebackend.Entity;

public enum NotificationType {
    FRIEND_REQUEST,
    MESSAGE
}
